--- a/advice.html
+++ b/advice.html
@@ -57,7 +57,7 @@
     onAuthStateChanged(auth, (user) => {
       if (!user) return window.location.href = "login.html";
       currentUser = user;
-      userNameSpan.textContent = user.email;
+      userNameSpan.textContent = (user.email === adminEmail) ? "Admin snailwu" : user.name;
 
       if (user.email === adminEmail) {
         adminPanel.style.display = "block";
@@ -82,10 +82,10 @@
         });
         bootSound.currentTime = 0;
         bootSound.play().catch(() => {});
-        statusText.textContent = "✅ Advice submitted!";
+        statusText.textContent = "☑ Advice submitted!";
         adviceInput.value = "";
       } catch {
-        statusText.textContent = "❌ Failed to submit.";
+        statusText.textContent = "☒ Failed to submit.";
       }
     };
 
