--- a/advice.html
+++ b/advice.html
@@ -57,7 +57,7 @@
     onAuthStateChanged(auth, (user) => {
       if (!user) return window.location.href = "login.html";
       currentUser = user;
-      userNameSpan.textContent = (user.email == adminEmail) ? "Admin snailwu" : user.name;
+      userNameSpan.textContent = (user.email == adminEmail) ? "Admin snailwu" : user.username;
 
       if (user.email === adminEmail) {
         adminPanel.style.display = "block";
